Create authentication services Close #11

--- a/src/Sculptor/Sculptor.BLL/Sculptor.BLL.csproj
+++ b/src/Sculptor/Sculptor.BLL/Sculptor.BLL.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Sculptor.Common\Sculptor.Common.csproj" />
+    <ProjectReference Include="..\Sculptor.DAL\Sculptor.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
