Create auth controller in api Close #33

--- a/src/Sculptor/Sculptor.PL/Sculptor.PL.csproj
+++ b/src/Sculptor/Sculptor.PL/Sculptor.PL.csproj
@@ -18,15 +18,13 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Sculptor.BLL\Sculptor.BLL.csproj" />
+    <ProjectReference Include="..\Sculptor.Common\Sculptor.Common.csproj" />
     <ProjectReference Include="..\Sculptor.DAL\Sculptor.DAL.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
