Add needed settings to start app

--- a/src/Sculptor/Sculptor.PL/appsettings.json
+++ b/src/Sculptor/Sculptor.PL/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLExpress;Database=SculptorDb;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=false"
+  },
+  "JWT": {
+    "Secret": "KriqDecaVMazetoSi11111NoPoDulgo222222",
+    "AccessTokenValidityInMinutes": 30
   }
 }
