Add timetable functionality and deploy tnhe project to Azure Close #25, Close #32, Close #38, Close #41, Close #42

--- a/src/Sculptor/Sculptor.PL/appsettings.json
+++ b/src/Sculptor/Sculptor.PL/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLExpress;Database=SculptorDb;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=false"
+    "DefaultConnection": "Server=tcp:sculptor.database.windows.net,1433;Initial Catalog=SculptorDb;Persist Security Info=False;User ID=Sculptor;Password=ScP@55w0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "JWT": {
     "Secret": "KriqDecaVMazetoSi11111NoPoDulgo222222",
-    "AccessTokenValidityInMinutes": 30
+    "AccessTokenValidityInMinutes": 300
   }
 }
